--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     因此用下面的方式，即把点给去掉 -->
   <link rel="stylesheet" href="/css/reset.css" />
   <title>React App</title>
+  <script src="http://api.map.baidu.com/api?v=2.0&ak=IjQaEWViub8FGnSC2Fs0ORpVYckttzvB"></script>
 </head>
 
 <body>
